Fix contrast of filled ghost disabled button

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -149,7 +149,7 @@
 
   &.euiButton--fill {
     background-color: $euiButtonColorGhostDisabled;
-    color: $euiColorInk;
+    color: makeHighContrastColor($euiButtonColorGhostDisabled, $euiButtonColorGhostDisabled, 2);
   }
 }
 
